chore: fix logo visibility

--- a/docs/_static/css/index.css
+++ b/docs/_static/css/index.css
@@ -74,6 +74,17 @@ button {
   margin: 0 auto;
 }
 
+.logo {
+  width: 140px;
+  height: 40px;
+  object-fit: contain;
+}
+
+.logo > img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .text-center {
   text-align: center;
 }
